added code for avg cal